# docker-core

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml
src/core/: #help_celery.txt  #help_database.txt  #help_faker.txt  #help_git.txt  #help_html.txt  #help_interpreter.txt  #help_redis.txt  #help_translate_django.txt  #z_changes.txt  .dockerignore  .env-sample  .flake8  .gitignore  Dockerfile  README.md  cleanup_project.py  manage.py  pyproject.toml  pytest.ini
src/core/.ai/docs-v-gpt4-o/: api_analysis.md  data_flow_analysis.md  dependency_analysis.md  request_flow_analysis.md  structure_analysis.md
src/core/_0_config/: __init__.py  asgi.py  settings.py  wsgi.py
src/core/_0_config/configs/: CSP_CONFIG.py  DATABASE_CONFIG.py  INSTALLED_APPS_CONFIG.py  LANGUAGES_CONFIG.py  MEDIA_CONFIG.py  MIDDLEWARE_CONFIG.py  RECAPTCHA_CONFIG.py  STATIC_CONFIG.py  TEMPLATES_CONFIG.py
src/core/_0_config/urls/: urls.py
src/core/_0_deploy/: script.sh
src/core/_0_utils/: apps.py  base_variables.py
src/core/_0_utils/functions/: date_and_time_function.py  gis_function.py  json_function.py  list_and_dict_function.py  number_function.py  queryset_function.py  string_function.py
src/core/_0_utils/locust/: locustfile.py
src/core/_0_utils/middlewares/: ip_address_middleware.py  request_params_middleware.py  user_agent_middleware.py  user_setting_middleware.py
src/core/_0_utils/models/: basic_models.py  ip_address_model.py  mixin_models.py
src/core/_0_utils/permissions/: auth_permission.py
src/core/_0_utils/service/: email_service.py  qrcode_service.py  sms_service.py
src/core/_0_utils/templatetags/: poll_extras.py
src/core/_0_utils/views/: auth_view.py  base_view.py  paginator_view.py
src/core/_1_site_setting/: admin.py  apps.py  tasks.py
src/core/_1_site_setting/forms/: forms.py
src/core/_1_site_setting/models/: models.py
src/core/_1_user/: apps.py  signals.py
src/core/_1_user/models/: models_base.py
src/core/_2_account/: admin.py  apps.py  signals.py
src/core/_2_account/manager/: user_manager.py  user_phone_manager.py
src/core/_2_account/models/: models.py  models_base.py
src/core/_2_auth/forms/: forms.py
src/core/_2_auth/views/: views.py
src/core/_2_locales/: language_en.py  placeholder_en.py  placeholder_fa.py
src/core/_2_panel_admin/: apps.py
src/core/_2_panel_user/: apps.py
src/core/___config/: __init__.py  asgi.py  settings.py  wsgi.py
src/core/___config/configs/: AUTH_AND_SESSION_CONFIG.py  BASE_CONFIG.py  CELERY_and_CATCHING_CONFIG.py  CKEDITOR_CONFIG.py  DATABASE_CONFIG.py  EMAIL_CONFIG.py  INSTALLED_APPS_CONFIG.py  JALALI_DATE_CONFIG.py  LANGUAGES_CONFIG.py  MEDIA_CONFIG.py  MIDDLEWARE_CONFIG.py  STATIC_CONFIG.py  (+1 more)
src/core/___deploy/: script.sh
src/core/___utils/: admin.py  apps.py
src/core/__site_setting/: apps.py
src/core/__user/: apps.py
src/core/_accounts/: apps.py  signals.py
src/core/_fake_data/: apps.py  urls.py  views.py
src/core/_locales/: errors_en.py  errors_fa.py  language_fa.py
src/core/_panel_admin/: apps.py
src/core/_panel_user/: apps.py
src/core/zzrequirements/: development.txt  production.txt
(+462 files in other folders)
