[project]
name = "core"
version = "5.1.2"
description = "The Core of the project and the initial settings"
readme = "README.md"
requires-python = "==3.13.*"

dependencies = [
    "asgiref==3.11.1",
    "celery==5.6.3",
    "django==6.0.4",
    "django-celery-beat==2.9.0",
    "django-ckeditor-5==0.2.20",
    "django-cleanup==9.0.0",
    "django-htmx==1.27.0",
    "django-jalali-date==2.0.0",
    "django-multiselectfield==1.0.1",
    "django-render-partial==0.4",
    "django-simple-history==3.11.0",
    "django-translated-fields==0.13.0",
    "faker==40.15.0",
    "jalali-core==1.0.0",
    "jdatetime==5.2.0",
    "pillow==12.2.0",
    "python-dateutil==2.9.0.post0",
    "python-decouple==3.8",
    "python-slugify==8.0.4",
    "pytz==2026.1.post1",
    "redis==7.4.0",
    "regex==2026.4.4",
    "setuptools==82.0.1",
    "six==1.17.0",
    "sorl-thumbnail==13.0.0",
    "sqlparse==0.5.5",
    "text-unidecode==1.3",
    "typing-extensions==4.15.0",
    "django-redis==6.0.0",
    "tzdata==2026.2",
    "cron-descriptor==1.4.5",
    "django-timezone-field==7.2.1",
    "python-crontab==3.3.0",
    "kombu==5.6.2",
    "billiard==4.2.4",
    "click-repl==0.3.0",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1.2",
    "amqp==5.3.1",
    "tzlocal==5.3.1",
    "vine==5.1.0",
    "wcwidth==0.6.0",
    "prompt-toolkit==3.0.52",
    "celery-types==0.26.0",
]

[project.optional-dependencies]
production = [
    "gunicorn==25.3.0",
    "packaging==26.2",
    "psycopg==3.3.3",
    "psycopg-binary==3.3.3",
]

testing = [
    "black==26.3.1",
    "click==8.3.3",
    "mypy-extensions==1.1.0",
    "packaging==26.2",
    "pathspec==1.1.0",
    "platformdirs==4.9.6",
    "pytokens==0.4.1",
    "flake8==7.3.0",
    "mccabe==0.7.0",
    "pycodestyle==2.14.0",
    "pyflakes==3.4.0",
    "iniconfig==2.3.0",
    "pluggy==1.6.0",
    "pygments==2.20.0",
    "pytest==9.0.3",
    "pytest-django==4.12.0",
    "platformdirs==4.9.6",
]

locust = [
    "bidict==0.23.1",
    "blinker==1.9.0",
    "brotli==1.2.0",
    "certifi==2026.4.22",
    "charset-normalizer==3.4.7",
    "configargparse==1.7.5",
    "flask==3.1.3",
    "flask-cors==6.0.2",
    "flask-login==0.6.3",
    "gevent==25.9.1",
    "geventhttpclient==2.3.9",
    "greenlet==3.4.0",
    "h11==0.16.0",
    "idna==3.13",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "locust==2.43.4",
    "markupsafe==3.0.3",
    "msgpack==1.1.2",
    "psutil==7.2.2",
    "python-engineio==4.13.1",
    "python-socketio==5.16.1",
    "pyzmq==27.1.0",
    "requests==2.33.1",
    "simple-websocket==1.1.0",
    "urllib3==2.6.3",
    "websocket-client==1.9.0",
    "werkzeug==3.1.8",
    "wsproto==1.3.2",
    "zope-event==6.1",
    "zope-interface==8.4",
]

[[tool.uv.index]]
#name = "runflare"  # parspack - liara
name = "parspack" #- liara
#url = "https://mirror.abrha.net/repository/pypi/simple"
url = "https://mirror-pypi.runflare.com/simple"
#url = "https://package-mirror.liara.ir/repository/pypi/simple"
default = true



#[tool.uv]
#venv-dir = ".zvenv"